main/default/objects/Campaign/fields/Compass_Setting__c.field-meta.xml
<CustomField>
    <fullName>Compass_Setting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compass Setting</label>
    <referenceTo>Compass_Setting__c</referenceTo>
    <relationshipLabel>CC Events</relationshipLabel>
    <relationshipName>CC_Events</relationshipName>
    <type>Lookup</type>
</CustomField>