main/default/objects/Campaign/fields/Contact_Us_Message__c.field-meta.xml
<CustomField>
    <fullName>Contact_Us_Message__c</fullName>
    <label>Contact Us Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>