main/default/objects/Campaign/fields/Contact_Us_User__c.field-meta.xml
<CustomField>
    <fullName>Contact_Us_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field contains the user to whom activities raised from the Contact Us page will be assigned to. If this field is empty, the activities will be assigned to the campaign&apos;s owner.</description>
    <label>Contact Us User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>