main/default/objects/Campaign/fields/Event_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Event_Image_URL__c</fullName>
    <label>Event Image URL</label>
    <type>TextArea</type>
</CustomField>