main/default/objects/Campaign/fields/Event_Page_URL__c.field-meta.xml
<CustomField>
    <fullName>Event_Page_URL__c</fullName>
    <label>Event Page URL</label>
    <type>Url</type>
</CustomField>