main/default/objects/Campaign/fields/Invite_Additional_Message__c.field-meta.xml
<CustomField>
    <fullName>Invite_Additional_Message__c</fullName>
    <description>This field stores the additional message in the invitation email.</description>
    <label>Invite Additional Message</label>
    <type>TextArea</type>
</CustomField>