main/default/objects/Campaign/fields/Meeting_URL__c.field-meta.xml
<CustomField>
    <fullName>Meeting_URL__c</fullName>
    <description>Contains meeting URL</description>
    <label>Meeting URL</label>
    <type>Url</type>
</CustomField>