main/default/objects/Campaign/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <formula>IF( RecordType.Name = &apos;Session&apos; &amp;&amp; ParentId &lt;&gt; null, HYPERLINK(&apos;/&apos; + ParentId, &apos;Event: &apos; +  Parent.Name),
IF( RecordType.Name = &apos;Event&apos; &amp;&amp; ParentId &lt;&gt; null, HYPERLINK(&apos;/&apos; + ParentId, &apos;Campaign: &apos; +  Parent.Name),
&apos;None&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent</label>
    <type>Text</type>
</CustomField>