main/default/objects/Campaign/fields/Re_Generate_URL__c.field-meta.xml
<CustomField>
    <fullName>Re_Generate_URL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Re-Generate URL</label>
    <type>Checkbox</type>
</CustomField>