main/default/objects/Campaign/fields/Sessions_Page_URL__c.field-meta.xml
<CustomField>
    <fullName>Sessions_Page_URL__c</fullName>
    <formula>SUBSTITUTE( Event_Page_URL__c ,&apos;events&apos;,&apos;sessions&apos;)</formula>
    <label>Sessions Page URL</label>
    <type>Text</type>
</CustomField>