main/default/objects/Campaign/recordTypes/Campaign.recordType-meta.xml
<RecordType>
    <fullName>Campaign</fullName>
    <active>true</active>
    <description>This is  the main campaign record</description>
    <label>Campaign</label>
</RecordType>