main/default/objects/Campaign/recordTypes/Session.recordType-meta.xml
<RecordType>
    <fullName>Session</fullName>
    <active>true</active>
    <label>Session</label>
</RecordType>