main/default/objects/Campaign/validationRules/CheckValidTime.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckValidTime</fullName>
    <active>true</active>
    <description>Check the validity of time.</description>
    <errorConditionFormula>AND(
            DATEVALUE( Start_Date_Time__c )   =  DATEVALUE( End_Date_Time__c ) , 
            TIMEVALUE(Start_Date_Time__c) &gt;= TIMEVALUE(End_Date_Time__c)
            
)</errorConditionFormula>
    <errorMessage>Please enter a valid time duration.</errorMessage>
</ValidationRule>