main/default/objects/Campaign/validationRules/Require_Event_Time.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Event_Time</fullName>
    <active>false</active>
    <description>This validates time of the event.</description>
    <errorConditionFormula>OR(
AND(NOT(ISNULL(StartDate)),ISNULL(Start_Time__c)),
AND(NOT(ISNULL(EndDate)),ISNULL(End_Time__c)))</errorConditionFormula>
    <errorMessage>Event time is required.</errorMessage>
</ValidationRule>