main/default/objects/Campaign/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CAMPAIGN.ACTIVE</columns>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.RECORDTYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>Start_Date_Time__c</columns>
    <columns>End_Date_Time__c</columns>
    <columns>Time_Zone__c</columns>
    <columns>Parent__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>