main/default/objects/Campaign/listViews/AllActiveCampaigns.listView-meta.xml
<ListView>
    <fullName>AllActiveCampaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.RECORDTYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>Start_Date_Time__c</columns>
    <columns>End_Date_Time__c</columns>
    <columns>Time_Zone__c</columns>
    <columns>Parent__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CAMPAIGN.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Campaign.Event</value>
    </filters>
    <label>All Active Events</label>
    <language>en_US</language>
</ListView>