main/default/objects/Campaign/listViews/AllSessions.listView-meta.xml
<ListView>
    <fullName>AllSessions</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.RECORDTYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>Start_Date_Time__c</columns>
    <columns>End_Date_Time__c</columns>
    <columns>Time_Zone__c</columns>
    <columns>Parent__c</columns>
    <columns>CAMPAIGN.ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Campaign.Session</value>
    </filters>
    <label>All Sessions</label>
    <language>en_US</language>
</ListView>